LOGIN, REGISTER AND EXCEPTIONS.