@@ -2,6 +2,7 @@ package com.alvarohdezarroyo.lookmomicanfly.Config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -24,6 +25,8 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource())) // enables CORS
                 .authorizeHttpRequests(auth -> {
                     auth.requestMatchers("/api/users/register").permitAll(); // allows access without authentication
+                    auth.requestMatchers("/api/users/login").permitAll();
+                    auth.requestMatchers(HttpMethod.GET, "/api/users/deactivate/{email}").permitAll();
                     auth.anyRequest().authenticated(); // any other route requires authorization
                 });
         return http.build();
@@ -32,11 +35,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*")); // Permitir todos los orígenes
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE")); // Métodos permitidos
-        configuration.setAllowedHeaders(List.of("*")); // Cabeceras permitidas
+        configuration.setAllowedOrigins(List.of("*")); // allows requests from any origin
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE")); // allowed methods
+        configuration.setAllowedHeaders(List.of("*")); // allows headers of any type
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // Aplicar a todas las rutas
+        source.registerCorsConfiguration("/**", configuration); // applies to all it's routes
         return source;
     }
 }
